add MobX and menu component

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "hugeicons-react": "^0.3.0",
+    "mobx": "^6.13.5",
+    "mobx-react-lite": "^4.1.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
